libs/librknn_api/include/rknn_api.h

typedef uint32_t rknn_context;
typedef uint64_t rknn_context;
typedef enum _rknn_query_cmd {
    RKNN_QUERY_IN_OUT_NUM = 0,                              
    RKNN_QUERY_INPUT_ATTR = 1,                              
    RKNN_QUERY_OUTPUT_ATTR = 2,                             
    RKNN_QUERY_PERF_DETAIL = 3,                             
    RKNN_QUERY_PERF_RUN = 4,                                
    RKNN_QUERY_SDK_VERSION = 5,                             
    RKNN_QUERY_MEM_SIZE = 6,                                
    RKNN_QUERY_CUSTOM_STRING = 7,                           
    RKNN_QUERY_NATIVE_INPUT_ATTR = 8,                       
    RKNN_QUERY_NATIVE_OUTPUT_ATTR = 9,                      
    RKNN_QUERY_NATIVE_NC1HWC2_INPUT_ATTR = 8,               
    RKNN_QUERY_NATIVE_NC1HWC2_OUTPUT_ATTR = 9,              
    RKNN_QUERY_NATIVE_NHWC_INPUT_ATTR = 10,                 
    RKNN_QUERY_NATIVE_NHWC_OUTPUT_ATTR = 11,                
    RKNN_QUERY_DEVICE_MEM_INFO = 12,                        
    RKNN_QUERY_INPUT_DYNAMIC_RANGE = 13,                    
    RKNN_QUERY_CURRENT_INPUT_ATTR = 14,                     
    RKNN_QUERY_CURRENT_OUTPUT_ATTR = 15,                    
    RKNN_QUERY_CURRENT_NATIVE_INPUT_ATTR = 16,              
    RKNN_QUERY_CURRENT_NATIVE_OUTPUT_ATTR = 17,             
    RKNN_QUERY_CMD_MAX
} rknn_query_cmd;
typedef enum _rknn_tensor_type {
    RKNN_TENSOR_FLOAT32 = 0,                            
    RKNN_TENSOR_FLOAT16,                                
    RKNN_TENSOR_INT8,                                   
    RKNN_TENSOR_UINT8,                                  
    RKNN_TENSOR_INT16,                                  
    RKNN_TENSOR_UINT16,                                 
    RKNN_TENSOR_INT32,                                  
    RKNN_TENSOR_UINT32,                                 
    RKNN_TENSOR_INT64,                                  
    RKNN_TENSOR_BOOL,
    RKNN_TENSOR_INT4,
    RKNN_TENSOR_TYPE_MAX
} rknn_tensor_type;
typedef enum _rknn_tensor_format {
    RKNN_TENSOR_NCHW = 0,                               
    RKNN_TENSOR_NHWC,                                   
    RKNN_TENSOR_NC1HWC2,                                
    RKNN_TENSOR_UNDEFINED,
    RKNN_TENSOR_FORMAT_MAX
} rknn_tensor_format;
typedef struct _rknn_perf_detail {
    char* perf_data;                                    
    uint64_t data_len;                                  
} rknn_perf_detail;
typedef struct _rknn_perf_run {
    int64_t run_duration;                               
} rknn_perf_run;
typedef struct _rknn_sdk_version {
    char api_version[256];                              
    char drv_version[256];                              
} rknn_sdk_version;
typedef struct _rknn_mem_size {
    uint32_t total_weight_size;                         
    uint32_t total_internal_size;                       
    uint64_t total_dma_allocated_size;                  
    uint32_t total_sram_size;                           
    uint32_t free_sram_size;                            
    uint32_t reserved[10];                              
} rknn_mem_size;
typedef struct _rknn_custom_string {
    char string[1024];                                  
} rknn_custom_string;
typedef enum _rknn_tensor_mem_flags {
    RKNN_TENSOR_MEMORY_FLAGS_ALLOC_INSIDE = 1,           
    RKNN_TENSOR_MEMORY_FLAGS_FROM_FD      = 2,           
    RKNN_TENSOR_MEMORY_FLAGS_FROM_PHYS    = 3,           
    RKNN_TENSOR_MEMORY_FLAGS_UNKNOWN
} rknn_tensor_mem_flags;
typedef enum _rknn_mem_alloc_flags {
    RKNN_FLAG_MEMORY_FLAGS_DEFAULT = 0 << 0, 
    RKNN_FLAG_MEMORY_CACHEABLE  = 1 << 0, 
    RKNN_FLAG_MEMORY_NON_CACHEABLE = 1 << 1, 
} rknn_mem_alloc_flags;
typedef enum _rknn_mem_sync_mode {
    RKNN_MEMORY_SYNC_TO_DEVICE = 0x1, 
    RKNN_MEMORY_SYNC_FROM_DEVICE = 0x2, 
    RKNN_MEMORY_SYNC_BIDIRECTIONAL = RKNN_MEMORY_SYNC_TO_DEVICE | RKNN_MEMORY_SYNC_FROM_DEVICE, 
} rknn_mem_sync_mode;
typedef struct _rknn_tensor_memory {
    void*            virt_addr;                         
    uint64_t         phys_addr;                         
    int32_t          fd;                                
    int32_t          offset;                            
    uint32_t         size;                              
    uint32_t         flags;                             
    void *           priv_data;                         
} rknn_tensor_mem;
typedef struct _rknn_input {
    uint32_t index;                                     
    void* buf;                                          
    uint32_t size;                                      
    uint8_t pass_through;                               
    rknn_tensor_type type;                              
    rknn_tensor_format fmt;                             
} rknn_input;
typedef struct _rknn_output {
    uint8_t want_float;                                 
    uint8_t is_prealloc;                                
    uint32_t index;                                     
    void* buf;                                          
    uint32_t size;                                      
} rknn_output;
typedef struct _rknn_init_extend {
    rknn_context ctx;                                    
    int32_t      real_model_offset;                      
    uint32_t     real_model_size;                        
    uint8_t      reserved[120];                          
} rknn_init_extend;
typedef struct _rknn_run_extend {
    uint64_t frame_id;                                  
    int32_t non_block;                                  
    int32_t timeout_ms;                                 
    int32_t fence_fd;                                   
} rknn_run_extend;
typedef struct _rknn_output_extend {
    uint64_t frame_id;                                  
} rknn_output_extend;
int rknn_init(rknn_context* context, void* model, uint32_t size, uint32_t flag, rknn_init_extend* extend);
int rknn_dup_context(rknn_context* context_in, rknn_context* context_out);
int rknn_destroy(rknn_context context);
int rknn_query(rknn_context context, rknn_query_cmd cmd, void* info, uint32_t size);